salesforce/force-app/main/default/objects/Compliance_Requirement__mdt/Compliance_Requirement__mdt.object-meta.xml
<CustomObject>
    <description>Metadata-driven rules from US Manufacturing Supplier Compliance Matrix. Each record = one compliance rule.</description>
    <label>Compliance Requirement</label>
    <pluralLabel>Compliance Requirements</pluralLabel>
</CustomObject>