salesforce/force-app/main/default/objects/Compliance_Requirement__mdt/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <description>Required document type (e.g. ISO 9001, IATF 16949, W-9, COI, EcoVadis, NDA, MSA, Bank, Other)</description>
    <label>Document Type</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>