salesforce/force-app/main/default/objects/Compliance_Requirement__mdt/fields/Effective_From__c.field-meta.xml
<CustomField>
    <fullName>Effective_From__c</fullName>
    <description>Date this rule becomes active. Null means active from the beginning.</description>
    <label>Effective From</label>
    <type>Date</type>
</CustomField>