salesforce/force-app/main/default/objects/Compliance_Requirement__mdt/fields/Effective_To__c.field-meta.xml
<CustomField>
    <fullName>Effective_To__c</fullName>
    <description>Date this rule is retired. Null means the rule is still active.</description>
    <label>Effective To</label>
    <type>Date</type>
</CustomField>