salesforce/force-app/main/default/objects/Compliance_Requirement__mdt/fields/Governing_Body__c.field-meta.xml
<CustomField>
    <fullName>Governing_Body__c</fullName>
    <description>OSHA, EPA, FDA, ISO, etc.</description>
    <label>Governing Body</label>
    <length>100</length>
    <type>Text</type>
</CustomField>