salesforce/force-app/main/default/objects/Compliance_Requirement__mdt/fields/Human_Review_Required__c.field-meta.xml
<CustomField>
    <fullName>Human_Review_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Force human-in-the-loop review for high-risk documents</description>
    <label>Human Review Required</label>
    <type>Checkbox</type>
</CustomField>