salesforce/force-app/main/default/objects/Compliance_Requirement__mdt/fields/Is_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Is_Mandatory__c</fullName>
    <defaultValue>true</defaultValue>
    <description>MANDATORY = hard block, RECOMMENDED = soft flag</description>
    <label>Is Mandatory</label>
    <type>Checkbox</type>
</CustomField>