salesforce/force-app/main/default/objects/Compliance_Requirement__mdt/fields/Penalty__c.field-meta.xml
<CustomField>
    <fullName>Penalty__c</fullName>
    <description>Penalty information and status from compliance matrix (e.g. fines, consequences)</description>
    <label>Penalty</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>