salesforce/force-app/main/default/objects/Compliance_Requirement__mdt/fields/Regulation_Standard__c.field-meta.xml
<CustomField>
    <fullName>Regulation_Standard__c</fullName>
    <description>Full name of regulation (e.g. OSHA General Industry 29 CFR 1910)</description>
    <label>Regulation / Standard</label>
    <length>255</length>
    <type>Text</type>
</CustomField>