salesforce/force-app/main/default/objects/Compliance_Requirement__mdt/fields/Renewal_Frequency_Days__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Frequency_Days__c</fullName>
    <description>Number of days between renewals (365 = annual)</description>
    <label>Renewal Frequency (Days)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>