salesforce/force-app/main/default/objects/Compliance_Requirement__mdt/fields/Required_For_Criticality__c.field-meta.xml
<CustomField>
    <fullName>Required_For_Criticality__c</fullName>
    <description>Semicolon-delimited criticality levels this rule applies to. Blank = all. Values: Strategic;Critical;Standard;Spot</description>
    <label>Required For Criticality</label>
    <length>100</length>
    <type>Text</type>
</CustomField>