salesforce/force-app/main/default/objects/Compliance_Requirement__mdt/fields/Required_For_Direct_Indirect__c.field-meta.xml
<CustomField>
    <fullName>Required_For_Direct_Indirect__c</fullName>
    <description>Whether this rule applies to Direct suppliers, Indirect suppliers, or Both. Blank = all. Values: Direct;Indirect;Both</description>
    <label>Required For Direct/Indirect</label>
    <length>20</length>
    <type>Text</type>
</CustomField>