salesforce/force-app/main/default/objects/Compliance_Requirement__mdt/fields/Required_For_Industry__c.field-meta.xml
<CustomField>
    <fullName>Required_For_Industry__c</fullName>
    <description>Semicolon-delimited industries this rule applies to. Blank = all sectors. Values: All;Automotive;Aerospace;Medical;General Manufacturing</description>
    <label>Required For Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>