salesforce/force-app/main/default/objects/Compliance_Requirement__mdt/fields/Required_For_Region__c.field-meta.xml
<CustomField>
    <fullName>Required_For_Region__c</fullName>
    <description>Semicolon-delimited regions this rule applies to. Blank = all. Values: Global;AMER;EMEA;APAC;LATAM</description>
    <label>Required For Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>