salesforce/force-app/main/default/objects/Compliance_Requirement__mdt/fields/Required_For_Tier__c.field-meta.xml
<CustomField>
    <fullName>Required_For_Tier__c</fullName>
    <description>Semicolon-delimited supplier tiers this rule applies to. Blank = all. Values: All;Tier 1;Tier 2;Tier 3</description>
    <label>Required For Tier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>