salesforce/force-app/main/default/objects/Compliance_Requirement__mdt/fields/Rule_ID__c.field-meta.xml
<CustomField>
    <fullName>Rule_ID__c</fullName>
    <description>Unique Rule Identifier from the Compliance Matrix (e.g. RULE-U-001)</description>
    <label>Rule ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>