salesforce/force-app/main/default/objects/Compliance_Requirement__mdt/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <description>Sector / Industry (All Sectors, Automotive, Aerospace, etc.)</description>
    <label>Sector</label>
    <length>100</length>
    <type>Text</type>
</CustomField>