salesforce/force-app/main/default/objects/Compliance_Requirement__mdt/fields/Severity_on_Failure__c.field-meta.xml
<CustomField>
    <fullName>Severity_on_Failure__c</fullName>
    <description>Severity level assigned to the Compliance_Assessment__c when this rule is not met.</description>
    <label>Severity on Failure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>