salesforce/force-app/main/default/objects/Compliance_Requirement__mdt/fields/Source_Regulation__c.field-meta.xml
<CustomField>
    <fullName>Source_Regulation__c</fullName>
    <description>Regulatory citation for this rule (e.g., &quot;Dodd-Frank §1502&quot;, &quot;21 CFR Part 820&quot;).</description>
    <label>Source Regulation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>