salesforce/force-app/main/default/objects/Compliance_Requirement__mdt/fields/Vendor_Type__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Type__c</fullName>
    <description>Vendor Type used for rule triggering</description>
    <label>Vendor Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>